# webds_sandbox

./: .gitignore  .prettierignore  MANIFEST.in  README.md  RELEASE.md  install.json  package-lock.json  package.json  pyproject.toml  setup.py
.github/workflows/: build.yml
binder/: environment.yml  postBuild
jupyter-config/nb-config/: webds_sandbox.json
jupyter-config/server-config/: webds_sandbox.json
schema/: plugin.json
src/: handler.ts  icons.ts  index.ts  widget.tsx  widget_container.tsx  widget_landing.tsx  widget_mui.tsx
src/widget/: Landing.tsx  SandboxComponent.tsx  SandboxWidget.tsx
webds_sandbox/: __init__.py  handlers.py
